k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp12
  namespace: testapp12

spec:
  replicas: 1

  selector:
    matchLabels:
      app: testapp12

  template:
    metadata:
      labels:
        app: testapp12

    spec:
      containers:
      - name: testapp12

        image: 443407534093.dkr.ecr.us-east-1.amazonaws.com/springboot:testapp12-latest

        ports:
        - containerPort: 8080
