k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp12
  namespace: testapp12

spec:
  selector:
    app: testapp12

  ports:
  - port: 80
    targetPort: 8080

  type: ClusterIP
